--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ btleplug = "0.11"
 tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
 uuid = "1"
 futures = "0.3.21"
+chrono = "0.4.31"
